Update index contact

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 							<p>Here's how you can contact me!</p>
 							
 							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="#">admin@deathlyface.tech</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/deathlyface</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:admin@deathlyface.tech" target="_top">admin@deathlyface.tech</a></li>
+								<li class="icon brands fa-instagram"><a href="instagram.com/deathlyface">instagram.com/deathlyface</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; deathlyface. All rights reserved.</li><li>Base Design taken from HTML5 UP</li>
