--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
-									<p>Some of my works, including the private.</p>
+									<p>Some of my works, including private works.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/CLI.png" alt="" /></a>
+											<h3 class="major">System32</h3>
+											<p>A hidden, CLI based document stealer for Windows. Scans for new files and upload them to dropbox.</p>
+											<a href="https://github.com/deathlyface/System32" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/solver.png" alt="" /></a>
+											<h3 class="major">reCaptcha Solver</h3>
+											<p>A Python - C# tools to solve reCaptchas using keras. Works for CaptchaBotRs. Currently in alpha.</p>
+											<a href="#" class="special">Private project</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/rotator.png" alt="" /></a>
+											<h3 class="major">Faucet Rotator</h3>
+											<p>A browser created for faucet collector. Works for autofaucet too. Discontinued due to faucethub closing.</p>
+											<a href="https://frwinapp.blogspot.com/" target="_blank" class="special">Discontinued</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/helper.png" alt="" /></a>
+											<h3 class="major">Helper Community</h3>
+											<p>An android app and web app created to help my friends get the newest school agenda and schedule.</p>
+											<a href="https://betahelper-b6703.web.app/" target="_blank" class="special">Discontinued</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -111,10 +111,10 @@
 							
 							<ul class="contact">
 								<li class="icon solid fa-envelope"><a href="mailto:admin@deathlyface.tech" target="_top">admin@deathlyface.tech</a></li>
-								<li class="icon brands fa-instagram"><a href="instagram.com/deathlyface">instagram.com/deathlyface</a></li>
+								<li class="icon brands fa-instagram"><a href="https://instagram.com/deathlyface" target="_blank">instagram.com/deathlyface</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; deathlyface. All rights reserved.</li><li>Base Design taken from HTML5 UP</li>
+								<li>&copy; deathlyface. All rights reserved.</li><li>Design taken from HTML5 UP</li>
 							</ul>
 						</div>
 					</section>
