--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 											<a href="https://github.com/deathlyface/System32" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/solver.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/solver.PNG" alt="" /></a>
 											<h3 class="major">reCaptcha Solver</h3>
 											<p>A Python - C# tools to solve reCaptchas using keras. Works for CaptchaBotRs. Currently in alpha.</p>
 											<a href="https://youtu.be/E9bi0TMjLkU" target="_blank" class="special">Private project</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/rotator.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/rotator.PNG" alt="" /></a>
 											<h3 class="major">Faucet Rotator</h3>
 											<p>A browser created for faucet collector. Works for autofaucet too. Discontinued due to faucethub closing.</p>
 											<a href="https://frwinapp.blogspot.com/" target="_blank" class="special">Discontinued</a>
