--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>deathlyface</title>
@@ -20,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Home</a></h1>
+						<h1><a href="index.html">About Me</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,7 +26,8 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
+								<li><a href="https://blog.deathlyface.tech">Blog</a></li>
+								<li><a href="index.html">About Me</a></li>
 								<li><a href="support.html">Support Me</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
