Moving the site
delete files.

--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-   <head>
-      <title>404</title>
-      <meta http-equiv = "refresh" content = "1; url = https://deathlyface.tech" />
-   </head>
-   <body>
-   <p>Redirecting you to home page.</p>
-   </body>
+	<head>
+		<title>deathlyface</title>
+	</head>
+	<body>
+		<p>This site has been moved to <a href="https://deathlyface.tech">deathlyface.tech</a>.</p>
+		<p>You should be redirected soon. Thanks.</p>
+	</body>
 </html>
