--- a/index.html
+++ b/index.html
@@ -2,128 +2,9 @@
 <html>
 	<head>
 		<title>deathlyface</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="propeller" content="e1a3bdcbfb9599b4467a7dc261f02e41">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">About Me</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="https://blog.deathlyface.tech">Blog</a></li>
-								<li><a href="index.html">About Me</a></li>
-								<li><a href="support.html">Support Me</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>deathlyface</h2>
-							<p>my profile</p>
-						</div>
-					</section>
-
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/profile.png" alt="face-mosaic" /></a>
-									<div class="content">
-										<h2 class="major">bio</h2>
-										<p>A 15 years old programmer. Code in HTML, Java (Android), C#, Python, and Arduino.</p>
-										<a href="https://github.com/deathlyface" target="_blank" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Projects</h2>
-									<p>Some of my works, including private works.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/CLI.png" alt="" /></a>
-											<h3 class="major">System32</h3>
-											<p>A hidden, CLI based document stealer for Windows. Scans for new files and upload them to dropbox.</p>
-											<a href="https://github.com/deathlyface/System32" class="special" target="_blank">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/solver.PNG" alt="" /></a>
-											<h3 class="major">reCaptcha Solver</h3>
-											<p>A Python - C# tools to solve reCaptchas using keras. Works for CaptchaBotRs. Currently in alpha.</p>
-											<a href="https://youtu.be/E9bi0TMjLkU" target="_blank" class="special">Private project</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/rotator.PNG" alt="" /></a>
-											<h3 class="major">Faucet Rotator</h3>
-											<p>A browser created for faucet collector. Works for autofaucet too. Discontinued due to faucethub closing.</p>
-											<a href="https://frwinapp.blogspot.com/" target="_blank" class="special">Discontinued</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/helper.png" alt="" /></a>
-											<h3 class="major">Helper Community</h3>
-											<p>An android app and web app created to help my friends get the newest school agenda and schedule.</p>
-											<a href="https://betahelper-b6703.web.app/" target="_blank" class="special">Discontinued</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="https://github.com/deathlyface" target="_blank" class="button">And many more</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Here's how you can contact me!</p>
-							
-							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="mailto:admin@deathlyface.tech" target="_top">admin@deathlyface.tech</a></li>
-								<li class="icon brands fa-instagram"><a href="https://instagram.com/deathlyface" target="_blank">instagram.com/deathlyface</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; deathlyface. All rights reserved.</li><li>Design taken from HTML5 UP</li>
-							</ul>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+	<body>
+		<p>This site has been moved to <a href="https://deathlyface.tech">deathlyface.tech</a>.</p>
+		<p>You should be redirected soon. Thanks.</p>
 	</body>
 </html>
