--- a/404.html
+++ b/404.html
@@ -6,5 +6,7 @@
 	<body>
 		<p>This site has been moved to <a href="https://deathlyface.tech">deathlyface.tech</a>.</p>
 		<p>You should be redirected soon. Thanks.</p>
+
+		<script>window.location = "https://deathlyface.tech"</script>
 	</body>
 </html>
